@@ -33,7 +33,7 @@ AC_SUBST(VERSION)
 
 GETTEXT_PACKAGE=christine
 AC_SUBST(GETTEXT_PACKAGE)
-ALL_LINGUAS="es_ES"
+ALL_LINGUAS="es"
 AC_SUBST(ALL_LINGUAS)
 USE_NLS=yes
 AC_SUBST(USE_NLS)
