@@ -3,8 +3,8 @@
 # little script to update po files 
 #
 
-echo "es_ES.po"
+echo "es.po"
 xgettext -p po -o christine.pot -l --keyword=translate --keyword=N_  --from-code=Glade --omit-header lib_christine/*py gui/*glade
-xgettext -p po -j -o es_ES.po -l --keyword=translate --keyword=N_  --from-code=Glade --omit-header lib_christine/*py gui/*glade
+xgettext -p po -j -o es.po -l --keyword=translate --keyword=N_  --from-code=Glade --omit-header lib_christine/*py gui/*glade
 #echo "christine.po"
 #xgettext -p po -j -o christine.pot -l --keyword=translate --keyword=N_  lib_christine/*py gui/string*
